--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -29,7 +29,7 @@ To run a testnet validator node refer to the following:
 * [Technical Requirements](/mine-hnt/validators/requirements)
 * [Configure Wallet](/mine-hnt/validators/validator-wallet)
 * [Obtain Testnet Network Tokens (TNT)](/mine-hnt/validators/validator-tnt)
-* [Run a validator](/mine-hnt/validators/validator-run)
+* [Run a Validator](/mine-hnt/validators/validator-run)
 * [Monitor a Validator](/mine-hnt/validators/validator-monitor)
 * [Troubleshooting](/mine-hnt/validators/validator-troubleshooting)
 * [Test Cases](/mine-hnt/validators/validator-testcases)
