--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain. 
 
-More information about validators and to register interest in staking go [here](https://www.helium.com/stake).
+For more information about validators and to register interest in staking, go [here](https://www.helium.com/stake).
 
 **NOTE: Expect frequent updates during testnet operation which could result in api and faucet service interruptions and may need to be restarted.**
 
