--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -16,7 +16,17 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 
 For more information about validators and to register interest in staking, go [here](https://www.helium.com/stake).
 
-**NOTE: Expect frequent updates during testnet operation which could result in api and faucet service interruptions and may need to be restarted.**
+:::info
+
+Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
+
+:::
+
+:::warning 
+
+During the Testnet, expect frequent updates which could result in API and Faucet service interruptions requiring node restarts.**
+
+:::
 
 To test validator nodes:
 * users need test tokens (TNT) to stake test validator nodes
