--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -1,14 +1,14 @@
 ---
 id: validator-run
-title: Run a validator
+title: Run a Validator
 hide_title: true
-sidebar_label: Run a validator
+sidebar_label: Run a Validator
 slug: /mine-hnt/validators/validator-run
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Run a validator
+# Run a Validator
 
 The following options exist to build a validator node:
 
