--- a/docs/mine-hnt/validators/testcases.mdx
+++ b/docs/mine-hnt/validators/testcases.mdx
@@ -1,14 +1,14 @@
 ---
 id: validator-testcases
-title: Test cases
+title: Test Cases
 hide_title: true
-sidebar_label: Test cases
+sidebar_label: Test Cases
 slug: /mine-hnt/validators/validator-testcases
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Test cases
+# Test Cases
 Perform the following test cases to help with testing:
 
 * Set up a wallet
