--- a/docs/mine-hnt/validators/testtokens.mdx
+++ b/docs/mine-hnt/validators/testtokens.mdx
@@ -1,8 +1,8 @@
 ---
 id: validator-tnt
-title: Obtain test tokens (TNT)
+title: Obtain Testnet Network Tokens (TNT)
 hide_title: true
-sidebar_label: Obtain test tokens
+sidebar_label: Obtain Testnet Network Tokens (TNT)
 slug: /mine-hnt/validators/validator-tnt
 ---
 
