--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -1,14 +1,14 @@
 ---
 id: validator-monitor
-title: Monitor a validator
+title: Monitor a Validator
 hide_title: true
-sidebar_label: Monitor a validator
+sidebar_label: Monitor a Validator
 slug: /mine-hnt/validators/validator-monitor
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Monitor a validator
+# Monitor a Validator
 
 The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec miner``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec miner miner"```.
 
