--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -2,7 +2,7 @@
 id: requirements
 title: Validator Requirements
 hide_title: true
-sidebar_label: Technical requirements
+sidebar_label: Technical Requirements
 slug: /mine-hnt/validators/requirements
 ---
 
