--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -24,7 +24,7 @@ Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) ser
 
 :::warning 
 
-During the Testnet, expect frequent updates which could result in API and Faucet service interruptions requiring node restarts.**
+During the Testnet, expect frequent updates which could result in API and Faucet service interruptions requiring node restarts.
 
 :::
 
