--- a/docs/mine-hnt/validators/testtokens.mdx
+++ b/docs/mine-hnt/validators/testtokens.mdx
@@ -11,6 +11,6 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 # Obtain Testnet Network Tokens (TNT)
 After your owner wallet is set up you need to obtain TNT used to stake the validator node.
 
-To obtain these TNT you need your public key. See View wallet balance and public key section for instructions on how to obtain. 
+To obtain these TNT you first need your wallet public key. See [Configure a Wallet](/mine-hnt/validators/validator-wallet) for instructions on how to get your public key. 
 
 Go [here](https://faucet.helium.wtf/) and enter your owner wallet public key where specified and follow the onscreen instructions. 
