--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Monitor a Validator
 
-The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec miner``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec miner miner"```.
+The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec validator``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec validator miner"```.
 
 ## Check the p2p network
 
