--- a/docs/mine-hnt/validators/testcases.mdx
+++ b/docs/mine-hnt/validators/testcases.mdx
@@ -13,17 +13,16 @@ Perform the following test cases to help with testing:
 
 * Set up a wallet
 * Set up a validator node
-* Stake test tokens (TNT) 
-* Observe TNT wallet receives rewards
+* Stake testnet network tokens (TNT) 
+* Observe wallet receives rewards
 * Unstake TNT, observe:
     * no longer in consensus group
     * no longer receiving rewards
-* Cancel unstaking
 * Take validator offline
     * prior to consensus group
     * during consensus group
 * Restake owner wallet
-* Transfer ownership of validator nodes
-* Set up wallet to multiple validator nodes
+* Transfer ownership of stake to different validator node (same wallet, different wallet)
+* Set up wallet tied to multiple validator nodes
 
 Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
