--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -1,8 +1,8 @@
 ---
 id: validator-wallet
-title: Configure a wallet
+title: Configure a Wallet
 hide_title: true
-sidebar_label: Configure a wallet
+sidebar_label: Configure a Wallet
 slug: /mine-hnt/validators/validator-wallet
 ---
 
@@ -11,7 +11,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 # Configure a wallet
 
 You’ll need an owner wallet to:
-* Stake your test tokens (TNT)
+* Stake your Testnet Network Tokens (TNT)
 * Receive validator node consensus group rewards
 
 Note: you can have a single wallet for multiple validator nodes. However multiple wallets for a single validator node is not supported.
@@ -29,27 +29,31 @@ At any time use ```-h``` or ```--help``` to get more help for a command.
 ### View wallet balance and public key
 ```./bin/helium-wallet info``` view public key and TNT balance. You’ll need this public key address to obtain TNT needed for staking. 
 
-To obtain TNT tokens visit [Obtain testing token (TNT)](/mine-hnt/validators/validator-tnt).
+To obtain TNT tokens visit [Obtain Testnet Network Tokens (TNT)](/mine-hnt/validators/validator-tnt).
 
-**```--commit```: NOTE always make sure to inspect the transaction _before_ adding the ```--committ```  option to sign and submit it to the api. There is no undo.**
+:::warning
+
+ Always make sure to inspect the transaction _before_ adding the **--committ**  option to sign and submit it to the api. There is no undo.
+
+:::
 
 ### Stake tokens
 After you have received your TNT you need to stake these tokens. 
 
-As part of the staking process the validator node address needs to be in the staking transaction and also needs to sign the transaction. After a wallet stakes a validator node, the wallet becomes that node’s owner, has control over that validator node, and receives the validator rewards.
+As part of the staking process the validator node address needs to be in the staking transaction and also needs to sign the transaction. After a wallet stakes a validator node, the wallet becomes that node’s owner, has control over that validator node, and receives rewards.
 
 #### To stake tokens perform the following:
 
 * Obtain the validator node address:
     * On the validator, run ```miner peer addr```.  This will produce something like: ```/p2p/112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi```
 
-    The part following the final slash, in this example ```112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi```, is the validator node's public address.
+    In this example the part following the final slash is the validator node's public address: ```112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi```.
 
 * Stake the TNT:
     * ```./bin/helium-wallet validators stake <public-address> 10000 --commit```
 
 ### Unstake tokens
-If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. 
+If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. This will be accelerated for the testnet. 
 
 #### To unstake tokens from a validator node perform the following:
 ```./bin/helium-wallet unstake <public-address> --commit```
@@ -84,6 +88,8 @@ This will produce an output similar to the following:
 ```
 
 You'll then need to send the txn value (a base64 string) to the new owner to be accepted. 
+
+#### To accept the transfer the new owner performs the following:
 
 ```./bin/helium-wallet validators transfer accept --commit <txn>```
 
