--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -53,7 +53,7 @@ As part of the staking process the validator node address needs to be in the sta
     * ```./bin/helium-wallet validators stake <public-address> 10000 --commit```
 
 ### Unstake tokens
-If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. This will be accelerated for the testnet. 
+If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. The cooldown period will be shortened for the testnet to 360 blocks (approx. an hour).
 
 #### To unstake tokens from a validator node perform the following:
 ```./bin/helium-wallet unstake <public-address> --commit```
