--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -94,4 +94,4 @@ You'll then need to send the txn value (a base64 string) to the new owner to be 
 ```./bin/helium-wallet validators transfer accept --commit <txn>```
 
 
-More general wallet commands here: https://github.com/helium/helium-wallet-rs
+More general wallet commands [here](https://github.com/helium/helium-wallet-rs).
