--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -58,7 +58,7 @@ If you unstake tokens the validator node enters a cooldown period. During this c
 #### To unstake tokens from a validator node perform the following:
 ```./bin/helium-wallet unstake <public-address> --commit```
 
-### Validator transfers 
+### Transfer stake 
 A validator node's stake can be transferred to other validator nodes in the same wallet or a different one. 
 
 If the stake is transferred to a validator node in a different wallet, the owner of the other wallet must accept the transfer to complete the transaction.
