--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -88,6 +88,8 @@ This will produce an output similar to the following:
 
 ```./bin/helium-wallet --format json validators transfer --new-address <new-public-address> --old-address <old-public-address> --new-owner <new-owner-wallet-public-address>```
 
+**Note: you must transfer the stake to a new validator node. **
+
 This will produce an output similar to the following:
 
 ```
