--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -14,7 +14,11 @@ You’ll need an owner wallet to:
 * Stake your Testnet Network Tokens (TNT)
 * Receive validator node consensus group rewards
 
-Note: you can have a single wallet for multiple validator nodes. However multiple wallets for a single validator node is not supported.
+:::note
+
+You can have a single wallet for multiple validator nodes. However multiple wallets for a single validator node is not supported.
+
+:::
 
 To download the wallet go [here](https://github.com/helium/helium-wallet-rs).
 
