--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -22,7 +22,7 @@ You can have a single wallet for multiple validator nodes. However multiple wall
 
 To download the wallet go [here](https://github.com/helium/helium-wallet-rs).
 
-## Wallet commands
+## Wallet Commands
 
 At any time use ```-h``` or ```--help``` to get more help for a command.
 
