--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -8,7 +8,7 @@ slug: /mine-hnt/validators/validator-wallet
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Configure a wallet
+# Configure a Wallet
 
 You’ll need an owner wallet to:
 * Stake your Testnet Network Tokens (TNT)
