--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -26,7 +26,7 @@ To download the wallet go [here](https://github.com/helium/helium-wallet-rs).
 
 At any time use ```-h``` or ```--help``` to get more help for a command.
 
-### Create a wallet
+### Create a Wallet
 
 ```./helium-wallet create basic --network testnet``` 
 
