--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -41,7 +41,7 @@ To obtain TNT tokens visit [Obtain Testnet Network Tokens (TNT)](/mine-hnt/valid
 
 :::
 
-### Stake tokens
+### Stake Tokens
 After you have received your TNT you need to stake these tokens. 
 
 As part of the staking process the validator node address needs to be in the staking transaction and also needs to sign the transaction. After a wallet stakes a validator node, the wallet becomes that node’s owner, has control over that validator node, and receives rewards.
