--- a/docs/mine-hnt/validators/testtokens.mdx
+++ b/docs/mine-hnt/validators/testtokens.mdx
@@ -13,4 +13,6 @@ After your owner wallet is set up you need to obtain TNT used to stake the valid
 
 To obtain these TNT you first need your wallet public key. See [Configure a Wallet](/mine-hnt/validators/validator-wallet) for instructions on how to get your public key. 
 
-Go [here](https://faucet.helium.wtf/) and enter your owner wallet public key where specified and follow the onscreen instructions. 
+## Helium Testnet Faucet
+
+When you've created your wallet, go the official [Helium Testnet Faucet]https://faucet.helium.wtf) and supply your owner wallet public key where specified and follow the onscreen instructions. 
