--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -27,7 +27,7 @@ The following options exist to build a validator node:
 * From [docker image](#docker-image)
 * From [source](#source)
 
-## Port forwarding
+## Port Forwarding
 
 Regardless of using docker or source, before launching a validator node configure the TCP port on your network. Validators communicate to peers over port: 2154/TCP. The networking logic knows how to get around a lack of forwarding, but validators will gain improved performance by forwarding the port.
 
