--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -58,7 +58,7 @@ grep avx2 /proc/cpuinfo
 ```
 If nothing is returned from these commands, your host system does not have AVX support and your validator may not be stable.
 
-### Run a container
+### Run a Container
 
 Before running the container for the first time, it is advisable to pick a "system mount point". This allows you to easily maintain your validator's blockchain identity (i.e. swarm keys) and blockchain state through image updates. 
 
