--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -90,7 +90,7 @@ This will produce an output similar to the following:
 
 #### To transfer stake to a new validator node in a different wallet:
 
-```./helium-wallet --format json validators transfer --new-address <new-public-address> --old-address <old-public-address> --new-owner <new-owner-wallet-public-address>```
+```./helium-wallet --format json validators transfer create --new-address <new-public-address> --old-address <old-public-address> --new-owner <new-owner-wallet-public-address>```
 
 **Note: you must transfer the stake to a new validator node. **
 
