--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -18,7 +18,7 @@ For more information about validators and to register interest in staking, go [h
 
 :::info
 
-Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
+Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to take part in the real-time Validator development, provide feedback, and report issues.
 
 :::
 
