--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -20,4 +20,4 @@ Based on early tests, validator node requirements include:
 
 * Stable IP and few ports (currently 2154 and eventually port 443) open to internet
 
-* Running on stable network connections (without things like proxies, NAT, etc.), load is largely symmetrical when producing blocks, so good upstream recommended.
+* Running on stable network connections free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
