--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -37,7 +37,7 @@ To obtain TNT tokens visit [Obtain Testnet Network Tokens (TNT)](/mine-hnt/valid
 
 :::warning
 
- Always make sure to inspect the transaction _before_ adding the **--committ**  option to sign and submit it to the api. There is no undo.
+ Always make sure to inspect the transaction _before_ adding the **--commit**  option to sign and submit it to the api. There is no undo.
 
 :::
 
