--- a/docs/mine-hnt/validators/testtokens.mdx
+++ b/docs/mine-hnt/validators/testtokens.mdx
@@ -15,4 +15,4 @@ To obtain these TNT you first need your wallet public key. See [Configure a Wall
 
 ## Helium Testnet Faucet
 
-When you've created your wallet, go the official [Helium Testnet Faucet]https://faucet.helium.wtf) and supply your owner wallet public key where specified and follow the onscreen instructions. 
+When you've created your wallet, go the official [Helium Testnet Faucet](https://faucet.helium.wtf) and supply your owner wallet public key where specified and follow the onscreen instructions. 
