--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -16,7 +16,7 @@ Based on early tests, validator node requirements include:
 * Memory: 8 GB or above
 * Storage: 256 GB or more 
 
-* If using a cloud provider (recommended) an AWS EC2 instance T2 large, xlarge or equivalent
+* If using AWS, a T2 large or xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with the same capabilities should be the target.
 
 * Stable IP and few ports (currently 2154 and eventually port 443) open to internet
 
