--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -18,6 +18,6 @@ Based on early tests, validator node requirements include:
 
 * If using AWS, a T2 large or xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with the same capabilities should be the target.
 
-* Stable IP and few ports (currently 2154 and eventually port 443) open to internet
+* Stable IP with ports `2154` and `443` open to internet
 
 * Running on stable network connections free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
