--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -22,7 +22,11 @@ Source: ```miner peer book -s```
 
 Docker: ```docker exec validator miner peer book -s```
 
-**Note: it could take several minutes before the peers appear in the table.**
+:::note
+
+It could take several minutes before the peers appear in the table.
+
+:::
 
 Once you have an address listed in ```listen_addrs``` and ```peers``` in the table at the bottom, you're connected to the p2p network.
 
