--- a/docs/mine-hnt/validators/troubleshoot.mdx
+++ b/docs/mine-hnt/validators/troubleshoot.mdx
@@ -15,7 +15,7 @@ There is a ```#validator``` [Discord](https://discord.gg/helium)  channel availa
 ## View logs
 This is always helpful to get an idea of what's going on:
 
-```docker exec miner tail -F /var/log/miner/console.log```
+```docker exec validator tail -F /var/log/console.log```
 
 ## Compromised server
 If you find that the server has been compromised just wipe it (save the blocks to avoid having to resync the entire blockchain), close the hole, stand up a new validator and then transfer the stake to it.
