--- a/docs/use-the-network/console/adr.mdx
+++ b/docs/use-the-network/console/adr.mdx
@@ -38,7 +38,7 @@ set to `0`.
 
 ## Allowing ADR in Console
 
-ADR is managed via [Label settings in Console](./labels#labels-settings). To
+ADR is managed via [Label settings in Console](/use-the-network/console/labels#labels-settings). To
 allow ADR for one device or a group of devices, simply toggle the Allow ADR in
 your Label settings. You can either create a Label strictly for managing ADR, or
 adjust the setting on a Label you already have attached to your devices. To
@@ -49,7 +49,7 @@ Label Settings as shown below.
   src={useBaseUrl("img/use-the-network/console/console-adr-label-settings.png")}
 />
 
-Next you will be presented with the Label settings window show below, click the
+Next you will be presented with the Label settings window shown below, click the
 ADR tab.
 
 <img
