--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -29,7 +29,7 @@ During the Testnet, expect frequent updates which could result in API and Faucet
 :::
 
 To test validator nodes:
-* users need test tokens (TNT) to stake test validator nodes
+* users need Testnet Network Tokens (TNT) to stake test validator nodes
 * the testnet consensus group will be sized dynamically based on the number of active testnet participants
 * block production and epochs are accelerated (10 second blocks, 10 minute epochs)
 * the cooldown period (number of blocks after unstaking when the validator node doesn't earn rewards, and the stake is returned to the owner's wallet) is shortened to 360 blocks (approx. an hour)
