--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -40,8 +40,8 @@ Docker: ```docker exec validator miner info height```
 
 If you’re syncing something similar to the following should appear:
 ```
-~$ miner info height
-6889        280756
+~$ validator miner info height
+14        449
 ```
 
-The first number is the election epoch and the second number is the block height of your validator. 
+The first number is the **election epoch** and the second number is the **block height** of your validator. 
