adding note about testnet API, shoehorning a docker script fix

--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -64,7 +64,7 @@ Before running the container for the first time, it is advisable to pick a "syst
 
 The validator directory should be created on a persistent ebs volume (if aws) or something similar that lives across server lifetimes.
 
-```mkdir $HOME/validator_data; source=$HOME/validator_data```
+```mkdir $HOME/validator_data```
 
 Use the ```run``` command to start your container for the first time:
 
