--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -12,6 +12,17 @@ import TabItem from "@theme/TabItem";
 
 ---
 
+:::warning 
+
+These docs reflect the Validator Mainnet API. However, it is **not yet live**. We are currently on Testnet. During the Testnet period, please use the following as the base url for the Testnet API:
+
+```
+https://testnet-api.helium.wtf/v1/
+```
+
+:::
+
+
 ## List Validators
 
 ```
