--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -60,7 +60,7 @@ As part of the staking process the validator node address needs to be in the sta
 If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. The cooldown period will be shortened for the testnet to 360 blocks (approx. an hour).
 
 #### To unstake tokens from a validator node perform the following:
-```./helium-wallet unstake <public-address> --commit```
+```./helium-wallet validators unstake <public-address> --commit```
 
 ### Transfer stake 
 A validator node's stake can be transferred to other validator nodes in the same wallet or a different one. 
