WIP CLI and API ref

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -43,3 +43,4 @@ To run a testnet validator node refer to the following:
 * [Monitor a Validator](/mine-hnt/validators/validator-monitor)
 * [Troubleshooting](/mine-hnt/validators/validator-troubleshooting)
 * [Test Cases](/mine-hnt/validators/validator-testcases)
+* [Validators API and CLI](/mine-hnt/validators/validators-cli-and-api)
