--- a/docs/mine-hnt/validators/validators-cli-and-api.mdx
+++ b/docs/mine-hnt/validators/validators-cli-and-api.mdx
@@ -2,13 +2,13 @@
 id: validators-cli-and-api
 title: Test Cases
 hide_title: true
-sidebar_label: Validators CLI and API
+sidebar_label: Validators CLI and API Reference
 slug: /mine-hnt/validators/validators-cli-and-api
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Validators CLI and API 
+# Validators CLI and API Reference
 
 ## API 
 
