--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -22,7 +22,7 @@ permissionless.
 
 ## Requirements
 
-Before we being, you should have the following:
+Before we begin, you should have the following:
 
 - [purchased an OUI](/use-the-network/buy-an-oui) and noted its number
 - installed Docker
